<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello" translatable="false">Playlist maker</string>
    <string name="title_media" translatable="false">Медиатека</string>
    <string name="title_search" translatable="false">Поиск</string>
    <string name="title_settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="write_support" translatable="false">Написать в поддержку</string>
    <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="mediateka" translatable="false">Медиатека</string>
    <string name="courseURL" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="supportEmail" translatable="false">damgaripov1@yandex.ru</string>
    <string name="supportSubject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMail" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="termsOfServiceUrl" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="message" translatable="false">Посмотри крутой курс по Андроид-разработке в Практикуме:</string>
    <string name="sv_albumPicture" translatable="false">Обложка альбома</string>
    <string name="nothingToFind" translatable="false">Ничего не найдено</string>
    <string name="noInternetError" translatable="false">Нет интернета</string>
    <string name="update" translatable="false">Обновить</string>
    <string name="nothing_to_find" translatable="false">Ничего не нашлось</string>
    <string name="search_results" translatable="false">Вы искали</string>
    <string name="clean_history" translatable="false">Очистить историю</string>
    <string name="country" translatable="false">Страна</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="year" translatable="false">Год</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="time" translatable="false">Длительность</string>
    <string name="like" translatable="false">Понравилось</string>
    <string name="Add" translatable="false">Добавить</string>
    <string name="play" translatable="false">Воспроизвести</string>
    <string name="favouriteTracks" translatable="false">Избранные треки</string>
    <string name="playlist" translatable="false">Плейлисты</string>
    <string name="playlistUI" translatable="false">Вы не создали ни одного плейлиста</string>
    <string name="favouriteTracksUI" translatable="false">Ваша медиатека пуста</string>
    <string name="hello_blank_fragment" translatable="false"> Hello blank fragment</string>
    <string name="track_add_now" translatable="false">Добавлено в плейлист</string>
    <string name="track_already_add_to_playlist" translatable="false">Трек уже добавлен в плейлист</string>
    <string name="add_playlist" translatable="false">Добавить в плейлист</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="name_playlist" translatable="false">Название</string>
    <string name="about" translatable="false">Описание</string>
    <string name="create" translatable="false">Создать</string>
    <string name="track_count_format" translatable="false">%1$d %2$s</string>


    <string name="playlist_is_empty" translatable="false">В этом плейлисте нет треков</string>
    <string name="delete_track_from_playlist" translatable="false">Хотите удалить трек?</string>
    <string name="delete_playlist" translatable="false">Удалить плейлист</string>
    <string name="delete_track" translatable="false">Удалить трек</string>
    <string name="delete" translatable="false">Удалить</string>
    <string name="cancel" translatable="false">Отменить</string>
    <string name="no_tracks_to_share" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist" translatable="false">Поделиться</string>
    <string name="edit" translatable="false">Редактировать информацию</string>
    <string name="do_you_want_delete_playlist" translatable="false">Хотите удалить плейлист</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>

    <string name="editPlaylist" translatable="false">Редактировать</string>
    <string name="save" translatable="false">Сохранить</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>