<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/height_menu"
    android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indent_bottom"
        android:text="@string/title_hello"
        android:textColor="@color/white"
        android:textSize="@dimen/size_main"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"/>

    <Button style="@style/main_screen"
        android:id="@+id/Search"
        android:text="@string/title_search" />

    <Button
        android:id="@+id/Mediateka"
        style="@style/main_screen"
        android:text="@string/title_media" />

    <Button style="@style/main_screen"
        android:id="@+id/Settings"
        android:text="@string/title_settings" />

</LinearLayout>
