<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorSecondary">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/layot_height"
        android:orientation="horizontal"
        tools:ignore="ExtraText"
        android:layout_marginBottom="@dimen/header_indent_24">

        <ImageButton
            android:id= "@+id/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_image_button"
            android:layout_marginVertical="@dimen/settings_image_button"
            android:src="@drawable/light_mode_back"
            android:foreground="?attr/selectableItemBackground"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_marginVertical="@dimen/settings_image_button"
            android:layout_marginEnd="@dimen/indent_right"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/indent_title_12"
            android:paddingTop="@dimen/title_top"
            android:paddingBottom="@dimen/indent_title_12"
            android:text="@string/title_settings"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_title"
            tools:ignore="RtlSymmetry"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_marginStart="@dimen/settings_indentation_left"
            android:layout_marginEnd="@dimen/settings_indentation_right"
            android:layout_marginTop="@dimen/settings_menu_vertical"
            android:layout_marginBottom="@dimen/settings_menu_vertical"
            android:text="@string/dark_theme"
            android:textSize="@dimen/size_settings_16"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/switch_settings"
            android:id="@+id/themeSwitcher"
            android:layout_marginHorizontal="60dp"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumbTint"
            app:trackTint="@color/switch_tint"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/Share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView style="@style/string_settings"
            android:text="@string/share" />

        <ImageView style="@style/icon_settings"
            android:src="@drawable/share"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView style="@style/string_settings"
            android:text="@string/write_support" />

        <ImageView
            style="@style/icon_settings"
            android:src="@drawable/support" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/TermsOfUse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView style="@style/string_settings"
        android:text="@string/terms_of_use" />

        <ImageView style="@style/icon_settings"
            android:src="@drawable/termsofuse"
            />
    </FrameLayout>

</LinearLayout>
