<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.practicum.playlistmaker.settings.ui.activity.SettingsFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/layot_height"
        android:layout_marginBottom="@dimen/header_indent_24"
        android:orientation="horizontal"
        tools:ignore="ExtraText">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:layout_marginVertical="@dimen/settings_image_button"
            android:layout_marginEnd="@dimen/indent_right"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/indent_title_12"
            android:paddingTop="@dimen/title_top"
            android:paddingBottom="@dimen/indent_title_12"
            android:text="@string/title_settings"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_title"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_marginStart="@dimen/settings_indentation_left"
            android:layout_marginTop="@dimen/settings_menu_vertical"
            android:layout_marginEnd="@dimen/settings_indentation_right"
            android:layout_marginBottom="@dimen/settings_menu_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorOnPrimary"
            android:textFontWeight="400"
            android:textSize="@dimen/size_settings_16" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/switch_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="60dp"
            app:thumbTint="@color/switch_thumbTint"
            app:trackTint="@color/switch_tint"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView
            style="@style/string_settings"
            android:text="@string/share" />

        <ImageView
            style="@style/icon_settings"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView
            style="@style/string_settings"
            android:text="@string/write_support" />

        <ImageView
            style="@style/icon_settings"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/termsOfUse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_items_height"
        android:orientation="horizontal">

        <TextView
            style="@style/string_settings"
            android:text="@string/terms_of_use" />

        <ImageView
            style="@style/icon_settings"
            android:src="@drawable/termsofuse" />
    </FrameLayout>

</LinearLayout>
