<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorSecondary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />
    <androidx.constraintlayout.widget.Guideline

        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/settings_image_button"
        android:layout_marginStart="@dimen/settings_image_button"
        android:src="@drawable/light_mode_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/albumPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/albumPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/back"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/trackName"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textColor="?attr/colorOnSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/albumPicture"
        tools:text="Track Name" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnSecondary"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        tools:text="Artist Name" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/play_button"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintBottom_toTopOf="@id/progressBar"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:contentDescription="@string/play"/>

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/add_button"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        android:contentDescription="@string/Add"/>

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:background="@drawable/like_button"
        app:layout_constraintTop_toTopOf="@id/playButton"
        app:layout_constraintBottom_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        android:contentDescription="@string/like"/>

    <TextView
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text = "0:00"
        android:gravity="center"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="14sp"
        android:textFontWeight="500"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintBottom_toTopOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"/>
    <TextView
        android:id="@+id/time"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/time"
        android:textColor="@color/color_player_text"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/album"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/album"
        android:textColor="@color/color_player_text"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/year"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/year"
        android:textColor="@color/color_player_text"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/genre"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/genre"
        android:textColor="@color/color_player_text"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/country"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_28dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/country"
        android:textColor="@color/color_player_text"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/trackTime"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        tools:text="0:00"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBaseline_toBaselineOf="@id/time"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/trackAlbum"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="end"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="?attr/colorOnSecondary"
        tools:text="@string/album"
        app:layout_constraintBaseline_toBaselineOf="@id/album"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/trackYear"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:gravity="end"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="?attr/colorOnSecondary"
        tools:text="@string/year"
        app:layout_constraintBaseline_toBaselineOf="@id/year"
        app:layout_constraintStart_toEndOf="@id/year"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/trackGenre"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:gravity="end"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="?attr/colorOnSecondary"
        tools:text="@string/genre"
        app:layout_constraintBaseline_toBaselineOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/genre"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/countryTrack"
        android:textSize="13sp"
        android:textFontWeight="400"
        android:fontFamily="@font/ys_display_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_28dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:gravity="end"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="?attr/colorOnSecondary"
        tools:text="@string/country"
        app:layout_constraintBaseline_toBaselineOf="@id/country"
        app:layout_constraintStart_toEndOf="@id/country"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="trackAlbum,album" />
</androidx.constraintlayout.widget.ConstraintLayout>